@@ -3,6 +3,8 @@
 (2008-04-26)
  * Now the default filter for Open->File is "multimedia", it shows video,
    audio and playlist files.
+ * Added an option in the playlist's preferences to save a copy of the
+   contents of the playlist to the config file.
 
 (2008-04-25)
  * Added a new widget (a line edit + a button) which allows the user to
